stream/k8s/base/cilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-cilium-gateway
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    io.cilium.gateway/name: cilium-gateway
